# ConformalAutoencoder

./: .gitignore  Autoencoders.py  README.md  TODO  cluster_test.py  conformal_autoencoder_cosine_comp_halfsphere.ipynb  data.py  helper.py  metrics.py  optuna.ipynb  optuna_study.db  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
CelebA/: celeba_small.ipynb  celeba_small_cluster.ipynb  celeba_small_defaultAE.ipynb  celeba_small_defaultAE_custom.ipynb  celeba_small_defaultAE_mse.ipynb  celeba_small_defaultAE_perceptual.ipynb  celeba_small_high_conf.ipynb  optuna_celeba.db  optuna_hyper.py  train_model.py  view_celeba_small.ipynb  view_optuna.ipynb
Cluster/: cluster.txt  cluster_interactive_test.ipynb  cluster_test.py  optuna_celeba.db  run_optuna_hyper  test_cluster  train_celeba_small
mnist_optuna/: model_comparison.ipynb  model_comparison_iso.ipynb  model_comparison_trace.ipynb  optuna.ipynb  optuna_ae_dim.ipynb  optuna_iso.ipynb  optuna_iso2.ipynb  optuna_study.db
mylib/: Autoencoders.py  data.py  metrics.py  metrics_copy.py  networks.py  networks_medium.py  vgg_perceptual_loss.py
toyexamples/: conformal_autoencoder_cosine_comp_halfsphere.ipynb  conformal_autoencoder_cosine_comp_halfsphere2.ipynb  conformal_autoencoder_cosine_comp_halfsphere3.ipynb  conformal_autoencoder_cosine_comp_halfsphere_train2.ipynb  conformal_autoencoder_cosine_comp_scurve.ipynb  conformal_autoencoder_jacobian_comp_halfsphere.ipynb  conformal_autoencoder_jacobian_comp_halfsphere2.ipynb  conformal_autoencoder_jacobian_comp_halfsphere_reg.ipynb  (+14 more)
